--- a/config/polybar/modules/i3.ini
+++ b/config/polybar/modules/i3.ini
@@ -11,41 +11,34 @@ enable-scroll = true
 wrapping-scroll = false
 reverse-scroll = false
 
-ws-icon-0 = I;
-ws-icon-1 = II;
-ws-icon-2 = III;
-ws-icon-3 = IV;
-ws-icon-4 = V;
-ws-icon-5 = VI;
-ws-icon-default = 
-
+ws-icon-0 = 1;
+ws-icon-1 = 2;
+ws-icon-2 = 3;ﭮ
+ws-icon-3 = 4;♝
+ws-icon-4 = 5;♞
+ws-icon-default = ♟
 format = <label-state>
 
-label-focused = %index%
+label-focused = %icon% 
 label-focused-foreground = ${colors.yellow}
-label-focused-background = ${colors.base}
-label-focused-padding = 1
-label-focused-font = 4
+label-focused-font = 8
 
-label-unfocused = %index%
+label-unfocused = %icon% 
 label-unfocused-foreground = ${colors.overlay2}
-label-unfocused-background = ${colors.base}
-label-unfocused-padding = 1
-label-unfocused-font = 4
+label-unfocused-font = 8
 
-label-empty = %index%
+label-empty = %icon%
 ; label-empty-foreground = ${colors.lavender}
-label-empty-background = ${colors.base}
 label-empty-padding = 2
-label-empty-font = 4
+label-empty-font = 8
 
-label-urgent = %index%
+label-urgent = %icon%
 label-urgent-foreground = ${colors.red}
-label-urgent-background = ${colors.base}
-label-urgent-padding = 1
-label-urgent-font = 4
+
+label-urgent-font = 8
 
 label-mode = %mode%
-label-mode-padding = 1
 label-mode-foreground = ${nord.nord6}
-label-mode-background = ${colors.base}
+
+label-separator = "  "
+label-separator-foreground = #ffb52a
