--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,16 +13,11 @@ set -g @tmux_power_prefix_highlight_pos 'LR'
 set -g @tmux_power_theme 'green' 
 
 ## Use vim keybindings in copy mode
-set-option -g mouse on
-setw -g mode-keys vi
-set-option -s set-clipboard off
-bind P paste-buffer
-bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi y send-keys -X rectangle-toggle
-unbind -T copy-mode-vi Enter
-bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel 'xclip -se c -i'
-bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel 'xclip -se c -i'
 
+set-option -g mouse on
+set-window-option -g mode-keys vi
+bind -T copy-mode-vi v send-keys -X begin-selection
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
 
