--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -967,7 +967,7 @@ tab_bar_margin_color none
 
 # The basic colors
 foreground              #CAD3F5
-background              #1a212e
+background              #1e1e2e
 selection_foreground    #24273A
 selection_background    #F4DBD6
 
