--- a/config/picom/picom.conf
+++ b/config/picom/picom.conf
@@ -14,17 +14,14 @@ round-borders-rule = [ "5:class_g = 'Alacritty'" ];
 
 #----------------- Blur Method -----------------------------
 
- /* blur: { */
- /*  method = "dual_kawase"; */
- /*  strength = 0.1; */
- /*  background = true; */
- /*  background-frame = true; */
- /*  background-fixed = true; */
- /* } */
+ blur: {
+  method = "dual_kawase";
+  strength = 2;
+  background = true;
+  background-frame = true;
+  background-fixed = true;
+ }
 
-blur-background-exclude = [
- "class_g = 'slop'"
-];
 backend = "glx";
 
 #----------------- Transparency ----------------------------
@@ -35,7 +32,6 @@ frame-opacity = 1.0;
 inactive-opacity-override = false;
 opacity-rule = [
   "10:class_g = 'i3'",
-  "10:class_i = 'presel_feedback'",
 ];
 
 #----------------- Fade Effects ----------------------------
