--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -1,31 +1,3 @@
-colors:
-  # Default colors
-  primary:
-    background: "#2E3440"
-    foreground: "#D8DEE9"
-
-  # Normal colors
-  normal:
-    black: "#3B4252"
-    red: "#BF616A"
-    green: "#A3BE8C"
-    yellow: "#EBCB8B"
-    blue: "#81A1C1"
-    magenta: "#B48EAD"
-    cyan: "#88C0D0"
-    white: "#E5E9F0"
-
-  # Bright colors
-  bright:
-    black: "#4C566A"
-    red: "#BF616A"
-    green: "#A3BE8C"
-    yellow: "#EBCB8B"
-    blue: "#81A1C1"
-    magenta: "#B48EAD"
-    cyan: "#8FBCBB"
-    white: "#ECEFF4"
-#
 # Configuration for Alacritty, the GPU enhanced terminal emulator.
 
 # Import additional configuration files
@@ -51,12 +23,14 @@ colors:
 # available, otherwise `xterm-256color` is used.
 #TERM: alacritty
 
-#window:
+window:
+  opacity: 0.1
 # Window dimensions (changes require restart)
 #
-# Number of lines/columns (not pixels) in the terminal. The number of columns
-# must be at least `2`, while using a value of `0` for columns and lines will
-# fall back to the window manager's recommended size.
+# Number of lines/columns (not pixels) in the terminal. Both lines and columns
+# must be non-zero for this to take effect. The number of columns must be at
+# least `2`, while using a value of `0` for columns and lines will fall back
+# to the window manager's recommended size
 #dimensions:
 #  columns: 0
 #  lines: 0
@@ -77,10 +51,6 @@ colors:
 #  x: 0
 #  y: 0
 
-# window:
-#   padding:
-#     x: 15
-#     y: 15
 # Spread additional padding evenly around the terminal content.
 #dynamic_padding: false
 
@@ -94,6 +64,12 @@ colors:
 #     - transparent: Title bar, transparent background and title bar buttons
 #     - buttonless: Title bar, transparent background and no title bar buttons
 #decorations: full
+
+# Background opacity
+#
+# Window opacity as a floating point number from `0.0` to `1.0`.
+# The value `0.0` is completely transparent and `1.0` is opaque.
+#opacity: 1.0
 
 # Startup Mode (changes require restart)
 #
@@ -119,11 +95,12 @@ colors:
 # General application class
 #general: Alacritty
 
-# GTK theme variant (Linux/BSD only)
+# Decorations theme variant (Linux/BSD only)
 #
-# Override the variant of the GTK theme. Commonly supported values are `dark`
-# and `light`. Set this to `None` to use the default theme variant.
-#gtk_theme_variant: None
+# Override the variant of the GTK theme/Wayland client side decorations.
+# Commonly supported values are `dark` and `light`. Set this to `None` to use
+# the default theme variant.
+#decorations_theme_variant: None
 
 #scrolling:
 # Maximum number of lines in the scrollback buffer.
@@ -134,6 +111,7 @@ colors:
 #multiplier: 3
 
 # Font configuration
+
 font:
   # Normal (roman) font face
   normal:
@@ -183,28 +161,81 @@ font:
 
   # Point size
   size: 9
-  # Offset is the extra space around each character. `offset.y` can be thought
-  # of as modifying the line spacing, and `offset.x` as modifying the letter
-  # spacing.
-  #offset:
-  #  x: 0
-  #  y: 0
+#font:
+# Normal (roman) font face
+#normal:
+# Font family
+#
+# Default:
+#   - (macOS) Menlo
+#   - (Linux/BSD) monospace
+#   - (Windows) Consolas
+#family: fira code
 
-  # Glyph offset determines the locations of the glyphs within their cells with
-  # the default being at the bottom. Increasing `x` moves the glyph to the
-  # right, increasing `y` moves the glyph upward.
-  #glyph_offset:
-  #  x: 0
-  #  y: 0
+# The `style` can be specified to pick a specific face.
+#style: Regular
 
-  # Thin stroke font rendering (macOS only)
-  #
-  # Thin strokes are suitable for retina displays, but for non-retina screens
-  # it is recommended to set `use_thin_strokes` to `false`.
-  #use_thin_strokes: true
+# Bold font face
+#bold:
+# Font family
+#
+# If the bold family is not specified, it will fall back to the
+# value specified for the normal font.
+#family: monospace
+
+# The `style` can be specified to pick a specific face.
+#style: Bold
+
+# Italic font face
+#italic:
+# Font family
+#
+# If the italic family is not specified, it will fall back to the
+# value specified for the normal font.
+#family: monospace
+
+# The `style` can be specified to pick a specific face.
+#style: Italic
+
+# Bold italic font face
+#bold_italic:
+# Font family
+#
+# If the bold italic family is not specified, it will fall back to the
+# value specified for the normal font.
+#family: monospace
+
+# The `style` can be specified to pick a specific face.
+#style: Bold Italic
+
+# Point size
+#size: 11.0
+
+# Offset is the extra space around each character. `offset.y` can be thought
+# of as modifying the line spacing, and `offset.x` as modifying the letter
+# spacing.
+#offset:
+#  x: 0
+#  y: 0
+
+# Glyph offset determines the locations of the glyphs within their cells with
+# the default being at the bottom. Increasing `x` moves the glyph to the
+# right, increasing `y` moves the glyph upward.
+#glyph_offset:
+#  x: 0
+#  y: 0
+
+# Use built-in font for box drawing characters.
+#
+# If `true`, Alacritty will use a custom built-in font for box drawing
+# characters (Unicode points 2500 - 259f).
+#
+#builtin_box_drawing: true
+
 # If `true`, bold text is drawn using the bright color variants.
 #draw_bold_text_with_bright_colors: false
 
+# Colors (Tomorrow Night)
 #colors:
 # Default colors
 #primary:
@@ -253,11 +284,7 @@ font:
 #  foreground: '#ffffff'
 #  background: '#000000'
 
-#bar:
-#  background: '#c5c8c6'
-#  foreground: '#1d1f21'
-
-# Keyboard regex hints
+# Keyboard hints
 #hints:
 # First character in the hint label
 #
@@ -284,6 +311,15 @@ font:
 #line_indicator:
 #  foreground: None
 #  background: None
+
+# Footer bar
+#
+# Color used for the footer bar on the bottom, used by search regex input,
+# hyperlink URI preview, etc.
+#
+#footer_bar:
+#  background: '#c5c8c6'
+#  foreground: '#1d1f21'
 
 # Selection colors
 #
@@ -341,6 +377,13 @@ font:
 #
 #indexed_colors: []
 
+# Transparent cell backgrounds
+#
+# Whether or not `window.opacity` applies to all cell backgrounds or only to
+# the default background. When set to `true` all cells will be transparent
+# regardless of their background color.
+#transparent_background_colors: false
+
 # Bell
 #
 # The bell is rung every time the BEL control character is received.
@@ -382,11 +425,6 @@ font:
 #
 #command: None
 
-# Background opacity
-#
-# Window opacity as a floating point number from `0.0` to `1.0`.
-# The value `0.0` is completely transparent and `1.0` is opaque.
-# background_opacity: 0.7
 #selection:
 # This string contains all characters that are used as separators for
 # "semantic words" in Alacritty.
@@ -426,6 +464,11 @@ font:
 # Cursor blinking interval in milliseconds.
 #blink_interval: 750
 
+# Time after which cursor stops blinking, in seconds.
+#
+# Specifying '0' will disable timeout for blinking.
+#blink_timeout: 5
+
 # If this is `true`, the cursor will be rendered as a hollow box when the
 # window is not focused.
 #unfocused_hollow: true
@@ -444,8 +487,7 @@ font:
 # shell.
 #
 # Default:
-#   - (macOS) /bin/bash --login
-#   - (Linux/BSD) user login shell
+#   - (Linux/BSD/macOS) `$SHELL` or the user's login shell, if `$SHELL` is unset
 #   - (Windows) powershell
 #shell:
 #  program: /bin/bash
@@ -461,6 +503,9 @@ font:
 # Send ESC (\x1b) before characters when alt is pressed.
 #alt_send_esc: true
 
+# Offer IPC using `alacritty msg` (unix only)
+#ipc_socket: true
+
 #mouse:
 # Click settings
 #
@@ -473,18 +518,22 @@ font:
 # If this is `true`, the cursor is temporarily hidden when typing.
 #hide_when_typing: false
 
-# Regex hints
+# Hints
 #
-# Terminal hints can be used to find text in the visible part of the terminal
-# and pipe it to other applications.
+# Terminal hints can be used to find text or hyperlink in the visible part of
+# the terminal and pipe it to other applications.
 #hints:
 # Keys used for the hint labels.
 #alphabet: "jfkdls;ahgurieowpq"
 
 # List with all available hints
 #
-# Each hint must have a `regex` and either an `action` or a `command` field.
-# The fields `mouse`, `binding` and `post_processing` are optional.
+# Each hint must have any of `regex` or `hyperlinks` field and either an
+# `action` or a `command` field. The fields `mouse`, `binding` and
+# `post_processing` are optional.
+#
+# The `hyperlinks` option will cause OSC 8 escape sequence hyperlinks to be
+# highlighted.
 #
 # The fields `command`, `binding.key`, `binding.mods`, `binding.mode` and
 # `mouse.mods` accept the same values as they do in the `key_bindings` section.
@@ -494,7 +543,8 @@ font:
 #
 # If the `post_processing` field is set to `true`, heuristics will be used to
 # shorten the match if there are characters likely not to be part of the hint
-# (e.g. a trailing `.`). This is most useful for URIs.
+# (e.g. a trailing `.`). This is most useful for URIs and applies only to
+# `regex` matches.
 #
 # Values for `action`:
 #   - Copy
@@ -508,6 +558,7 @@ font:
 #enabled:
 # - regex: "(ipfs:|ipns:|magnet:|mailto:|gemini:|gopher:|https:|http:|news:|file:|git:|ssh:|ftp:)\
 #           [^\u0000-\u001F\u007F-\u009F<>\"\\s{-}\\^⟨⟩`]+"
+#   hyperlinks: true
 #   command: xdg-open
 #   post_processing: true
 #   mouse:
@@ -535,13 +586,20 @@ font:
 #   - Right
 #   - Numeric identifier such as `5`
 #
-# - `action` (see key bindings)
+# - `action` (see key bindings for actions not exclusive to mouse mode)
+#
+# - Mouse exclusive actions:
+#
+#   - ExpandSelection
+#       Expand the selection to the current mouse cursor location.
 #
 # And optionally:
 #
 # - `mods` (see key bindings)
 #mouse_bindings:
-#  - { mouse: Middle, action: PasteSelection }
+#  - { mouse: Right,                 action: ExpandSelection }
+#  - { mouse: Right,  mods: Control, action: ExpandSelection }
+#  - { mouse: Middle, mode: ~Vi,     action: PasteSelection  }
 
 # Key bindings
 #
@@ -610,6 +668,8 @@ font:
 #   - ToggleFullscreen
 #   - SpawnNewInstance
 #       Spawn a new instance of Alacritty.
+#   - CreateNewWindow
+#       Create a new Alacritty window from the current process.
 #   - ClearLogNotice
 #       Clear Alacritty's UI warning and error notice.
 #   - ClearSelection
@@ -627,6 +687,8 @@ font:
 #   - ToggleBlockSelection
 #   - ToggleSemanticSelection
 #       Toggle semantic selection based on `selection.semantic_escape_chars`.
+#   - CenterAroundViCursor
+#       Center view around vi mode cursor
 #
 # - Vi mode exclusive cursor motion actions:
 #
@@ -752,9 +814,9 @@ font:
 #- { key: Copy,                                        action: Copy           }
 #- { key: L,         mods: Control,                    action: ClearLogNotice }
 #- { key: L,         mods: Control, mode: ~Vi|~Search, chars: "\x0c"          }
-#- { key: PageUp,    mods: Shift,   mode: ~Alt,        action: ScrollPageUp,  }
+#- { key: PageUp,    mods: Shift,   mode: ~Alt,        action: ScrollPageUp   }
 #- { key: PageDown,  mods: Shift,   mode: ~Alt,        action: ScrollPageDown }
-#- { key: Home,      mods: Shift,   mode: ~Alt,        action: ScrollToTop,   }
+#- { key: Home,      mods: Shift,   mode: ~Alt,        action: ScrollToTop    }
 #- { key: End,       mods: Shift,   mode: ~Alt,        action: ScrollToBottom }
 
 # Vi Mode
@@ -780,6 +842,7 @@ font:
 #- { key: V,      mods: Control,       mode: Vi|~Search, action: ToggleBlockSelection    }
 #- { key: V,      mods: Alt,           mode: Vi|~Search, action: ToggleSemanticSelection }
 #- { key: Return,                      mode: Vi|~Search, action: Open                    }
+#- { key: Z,                           mode: Vi|~Search, action: CenterAroundViCursor    }
 #- { key: K,                           mode: Vi|~Search, action: Up                      }
 #- { key: J,                           mode: Vi|~Search, action: Down                    }
 #- { key: H,                           mode: Vi|~Search, action: Left                    }
@@ -878,3 +941,6 @@ font:
 
 # Print all received window events.
 #print_events: false
+
+# Highlight window damage information.
+#highlight_damage: false
