--- a/config/i3/config
+++ b/config/i3/config
@@ -1,9 +1,3 @@
-#  ____ _____ 
-# |  _ \_   _|  Derek Taylor (DistroTube)
-# | | | || |    http://www.youtube.com/c/DistroTube
-# | |_| || |    http://www.gitlab.com/dwt1/ 
-# |____/ |_|  	
-#      
 # A customized config for i3-gaps window manager (http://www.i3wm.org) 
 # Based off of the config for Manjaro's i3 Community Distro.    
 # Modified by Derek Taylor (http://www.gitlab.com/dwt1/ )
@@ -66,15 +60,6 @@ bindsym XF86AudioMute exec --no-startup-id sh ~/.local/bin/volume mute
 bindsym XF86AudioRaiseVolume exec --no-startup-id sh ~/.local/bin/volume up 
 bindsym XF86AudioLowerVolume exec --no-startup-id sh ~/.local/bin/volume down 
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle 
-################################################################################################
-## sound-section - DO NOT EDIT if you wish to automatically upgrade Alsa -> Pulseaudio later! ##
-################################################################################################
-
-# exec --no-startup-id volumeicon
-#exec --no-startup-id pulseaudio
-# exec --no-startup-id pa-applet
-
-################################################################################################
 
 # Screen brightness controls brightnessctl
 bindsym XF86MonBrightnessUp exec --no-startup-id "sh ~/.local/bin/brightness up"
@@ -85,7 +70,7 @@ bindsym $mod+F1 exec brave
 bindsym $mod+F2 exec discord
 bindsym $mod+F3 exec thunar
 bindsym $mod+Shift+d --release exec "killall dunst; exec notify-send 'restart dunst'"
-bindsym Print exec --no-startup-id sh ~/.local/bin/takeshot --area
+bindsym Print exec --no-startup-id flameshot gui
 bindsym Shift+Print exec --no-startup-id sh ~/.local/bin/takeshot --now
 bindsym $mod+Print --release exec --no-startup-idsh ~/.local/bin/takeshot --now 
 bindsym $mod+Shift+Print --release exec --no-startup-id i3-scrot -s
@@ -203,8 +188,8 @@ bindsym $mod+Shift+7 move container to workspace $ws7; workspace $ws7
 bindsym $mod+Shift+8 move container to workspace $ws8; workspace $ws8
 
 # Open applications on specific workspaces
-assign [class="discord"] $ws2
-assign [class="firefox"] $ws1
+assign [class="discord"] $ws3
+assign [class="Brave-browser"] $ws1
 # assign [class="Pcmanfm"] $ws3
 
 # Open specific applications in floating mode
@@ -289,7 +274,7 @@ mode "resize" {
 # Autostart applications
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh 
 exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
-exec --no-startup-id nitrogen --restore; sleep 1; picom --config ~/.config/picom/picom.conf
+exec --no-startup-id nitrogen --restore; sleep 1; picom --experimental-backends --config ~/.config/picom/picom.conf
 exec --no-startup-id nm-applet
 
 
