--- a/config/polybar/config.ini
+++ b/config/polybar/config.ini
@@ -41,9 +41,10 @@ font-3 = "CaskaydiaCove Nerd Font:size=9;3"
 font-4 = "Iosevka Nerd Font:size=20;4"
 font-5 = "Iosevka Nerd Font:style=Regular:size=12;3"
 font-6 = "feather:size=12;3"
+font-7 = "CaskaydiaCove Nerd Font:size=17;3"
 
-modules-left = launcher sep LD i3 RD sepLine cpu separatorText memory
-modules-center = LD polywins RD
+modules-left = sep i3 sepLine cpu separatorText memory
+modules-center = LD spotify RD
 modules-right = network separatorText brightness separatorText volume separatorText battery sepLine LD date RD powermenu
 spacing = 0
 dim-value = 1.0
