--- a/config/polybar/modules/i3.ini
+++ b/config/polybar/modules/i3.ini
@@ -14,28 +14,27 @@ reverse-scroll = false
 ws-icon-0 = 1;
 ws-icon-1 = 2;
 ws-icon-2 = 3;ﭮ
-ws-icon-3 = 4;♝
+ws-icon-3 = 4;
 ws-icon-4 = 5;♞
 ws-icon-default = ♟
 format = <label-state>
 
-label-focused = %icon% 
+label-focused = %index% 
 label-focused-foreground = ${colors.yellow}
-label-focused-font = 8
+label-focused-font = 7
 
-label-unfocused = %icon% 
+label-unfocused = %index% 
 label-unfocused-foreground = ${colors.overlay2}
-label-unfocused-font = 8
+label-unfocused-font = 7
 
-label-empty = %icon%
+label-empty = %index%
 ; label-empty-foreground = ${colors.lavender}
-label-empty-padding = 2
-label-empty-font = 8
+label-empty-font = 7
 
-label-urgent = %icon%
+label-urgent = %index%
 label-urgent-foreground = ${colors.red}
 
-label-urgent-font = 8
+label-urgent-font = 7
 
 label-mode = %mode%
 label-mode-foreground = ${nord.nord6}
